# MassSpringSystemSolver

./: .gitignore  CMakeLists.txt  Drawable.h  Engine.h  GLSLProgram.h  Movable.h  Shader.h  Shape.h  SolidObject.h  Types.h  VertexObject.h  Visualization.h  WindowManager.h  World.h
data/: canstick.ply2  mesh.geo  mesh.msh  mesh.ply2  mesh1.geo  mesh1.msh
scratch/: Timer.h  eigen_sparse.cpp  hashmap  hashmap.cpp  main  makefile  pardiso.cpp
shaders/: MassSpringFS.glsl  MassSpringVS.glsl  ParticleFS.glsl  ParticleGS.glsl  ParticleVS.glsl  PolygonMonoColorFS.glsl  PolygonMonoColorVS.glsl  TextureFS.glsl  TextureVS.glsl
shaders/old/: fragment_shader.glsl  vertex_shader.glsl
src/: AlignedAllocator.h  Common.h  Common.h.in  Earth.cpp  Earth.h  MSN2DWorld.cpp  MSN2DWorld.h  MSNWorld (copy).h  MSNWorld.cpp  MSNWorld.h  MSNWorldCOPY.cpp  MassSpringSystem.cpp  MassSpringSystem.h  MathKernels.h  MeshLoader (copy).h  MeshLoader.h  Nodes.h  SM.h  SOM.h  Solver.cpp  Solver.h  Solvers.cpp  Solvers.h  Springs.h  VecVec.h  main.cpp
src/glsl/: MassSpringFS3D.glsl  MassSpringVS3D.glsl
src/python/: calc_distance.py  calc_node_distance_error.py  calc_performance.py  calc_timing.py  plot_condition_number.py  plot_nodes.py  plot_timing.py
test/: test.cpp
